[metadata]
name = oio-reporting
description = OpenIO Software Defined Storage
summary = OpenIO SDS
author = OpenIO
author_email = support@openio.io
url = https://github.com/open-io/oio-sds

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    oio.diag

[entry_points]
oio.tools =
    list_process = script.processlist:ProcessListing
    net_stat = script.network:Netstat
    net_itf = script.network:Interfaces
    net_cnx = script.network:Cnx
    net_routes = script.network:Routes
    net_ip6tables = script.network:Ip6Table
    net_iptables = script.network:IpTable
    sys_selinux = script.syscfg:SELinux
    sys_sysctl = script.syscfg:Sysctl
    sys_free = script.syscfg:Free
    sys_mounts = script.syscfg:Mounts
    sys_parts = script.syscfg:Partitions
    sys_uptime = script.syscfg:Uptime
    sys_uname = script.syscfg:Uname
    sys_cpuinfo = script.syscfg:CpuInfo
    oio_cfg_config = script.oiocfg:EtcFiles
    oio_proc_info = script.oioprocessinfo:OioProcessInfo
    oio_gridinit = script.oiocluster:Gridinit
    oio_cluster_list = script.oiocluster:ClusterList
    oio_local_ns = script.oiocluster:LocalConfig
    oio_live_versions = script.oiocluster:LiveVersions
    oio_live_config = script.oiocluster:LiveConfig
    sample = sample.sample:Sample
    coredump = script.coredump:CoreDump
    test = infratest.test:TestTestInfra
    packages = script.packages:Packages
