[metadata]
name = oiodiag
description = OpenIO Diagnosis CLI tool
summary = CLI tool gathering local and global data about an OpenIO SDS installation
author = OpenIO
author_email = support@openio.io
url = https://github.com/open-io/oio-diag

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    oiodiag
scripts =
    oio-diag

[entry_points]
sys =
    net_stat = oiodiag.script.network:Netstat
    net_itf = oiodiag.script.network:Interfaces
    net_cnx = oiodiag.script.network:Cnx
    net_routes = oiodiag.script.network:Routes
    net_ip6tables = oiodiag.script.network:Ip6Table
    net_iptables = oiodiag.script.network:IpTable
    sys_selinux = oiodiag.script.syscfg:SELinux
    sys_sysctl = oiodiag.script.syscfg:Sysctl
    sys_free = oiodiag.script.syscfg:Free
    sys_mounts = oiodiag.script.syscfg:Mounts
    sys_parts = oiodiag.script.syscfg:Partitions
    sys_uptime = oiodiag.script.syscfg:Uptime
    sys_uname = oiodiag.script.syscfg:Uname
    sys_cpuinfo = oiodiag.script.syscfg:CpuInfo
    coredump = oiodiag.script.coredump:CoreDump
    packages = oiodiag.script.packages:Packages
    proc_list = oiodiag.script.processlist:ProcessListing
    zookeeper = oiodiag.script.zookeeper:ZooKeeper
oio.local =
    oio_config = oiodiag.script.oiocfg:EtcFiles
    oio_proc = oiodiag.script.oioprocessinfo:OioProcessInfo
    oio_gridinit = oiodiag.script.oiocluster:Gridinit
    oio_cluster = oiodiag.script.oiocluster:ClusterList
    oio_local = oiodiag.script.oiocluster:LocalConfig
oio.platform =
    oio_live_versions = oiodiag.script.oiocluster:LiveVersions
    oio_live_config = oiodiag.script.oiocluster:LiveConfig
infratest =
    test = infratest.test:TestTestInfra
    sample = sample.sample:Sample
